# arhugula

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  harness.toml.example  justfile  pyproject.toml
harness-as/: AGENTS.md  pyproject.toml
harness-as/tests/: test_anthropic_attribute_namespaces.py  test_anthropic_graceful_degradation.py  test_anthropic_primitive_adoption.py  test_anthropic_primitive_sampling.py  test_as_substrate_seam_exports.py  test_blast_radius_floor.py  test_cross_deployment_monotonicity.py  test_deployment_matrix.py  test_discriminators.py  test_engine_class_composition.py  test_forced_tier_resolution.py  test_gate_level_composition.py  test_mcp_invocation_fail_class.py  test_mcp_transport_floor.py  test_memory_tool_contracts.py  test_operator_policy_override_scope.py  test_sandbox_attribute_schema.py  test_sandbox_event_idempotency.py  test_sandbox_event_sampling.py  test_sandbox_fail_class.py  test_sandbox_provider_class.py  test_sandbox_span_schema.py  test_sandbox_tier.py  test_sandbox_tier_composition.py  test_sandbox_tier_floor.py  test_secret_allowlist.py  test_secret_fail_class.py  test_secret_fetch.py  test_secret_fetch_audit.py  test_secret_fetch_emission.py  test_secret_negative_observation.py  test_secret_outputs_hash.py  test_secret_passthrough.py  test_sub_agent_sandbox_tier.py  test_tool_contract.py
harness-core/: pyproject.toml
harness-core/tests/: test_u_core_01.py  test_u_core_02.py  test_workload_class.py
harness-cp/: AGENTS.md  pyproject.toml
harness-cp/tests/: test_audit_hitl_span_namespace.py  test_both_by_tier_overlay.py  test_brief_authoring_inheritance.py  test_concurrent_prompt_cache_warmup.py  test_cp_cross_axis_composition_manifest.py  test_cp_namespace_export_manifest.py  test_cp_shared_types.py  test_cross_family_fallback_chain.py  test_cross_sibling_cryptographic_shape.py  test_default_downgrade_rule.py  test_default_gate_level_monotonicity_e2e.py  test_embedding_routing.py  test_engine_class.py  test_engine_class_candidate.py  test_engine_namespace.py  test_f2_substrate_join_discipline.py  test_f5_signing_key_resolution.py  test_fall_through_procedure.py  test_five_axis_composition.py  test_gate_level_rule.py  test_handoff_context.py  test_hitl_as_tool_call_rewriting.py  test_hitl_placement.py  test_hitl_response_palette.py  test_hitl_timeout_degradation.py  test_hitl_tool_call_rewriting_state_ledger_emission.py  test_layer_budget.py  test_layered_routing_strategy.py  test_lease_namespace.py  test_lifecycle_event_span_map.py  test_material_diff_detection.py  test_mcp_client_namespace_emitter.py  test_memory_access_mode.py  test_multi_agent_span_hierarchy.py  test_operator_burden_eval.py  test_override_state_ledger_emission.py  test_parent_fanout_close_entry.py  test_pause_captured_engine_layer_state_ledger_emission.py  test_pause_resume_protocol.py  test_pause_resume_protocol_attempt_resume.py  (+65 more)
harness-cxa/: pyproject.toml
harness-cxa/tests/: test_cp_audit_conversion.py  test_u_cp_72_converter_6_prefix_extension.py
harness-is/: AGENTS.md  pyproject.toml
harness-is/tests/: test_artifact_tier_registry.py  test_atomic_deploy_event.py  test_branch_metadata.py  test_chain_link_construction.py  test_chain_verification.py  test_cli_profile.py  test_entry_hash.py  test_git_tier_sub_role_taxonomy.py  test_jsonl_event_ledger_lifecycle.py  test_memory_operation_ledger.py  test_memory_path_registry.py  test_memory_policy.py  test_memory_record_envelope.py  test_memory_redaction.py  test_memory_retrieval.py  test_memory_retrieval_index.py  test_memory_store.py  test_path_class_registry.py  test_path_resolver.py  test_prompt_manifest.py  test_shadow_git_checkpoint.py  test_shadow_git_rollback.py  test_state_ledger_entry_schema.py  test_state_ledger_read.py  test_state_ledger_write.py  test_state_ledger_write_sidecar.py  test_substrate_seam_exports.py  test_workload_manifest_opt_in_schema.py  test_worktree_isolation.py
harness-od/: AGENTS.md  pyproject.toml
harness-od/tests/: test_alignment_floor_drift_detection.py  test_as_source_namespace_verification.py  test_attribute_class_enforcement.py  test_audit_ledger_types.py  test_base_rate_set_and_envelope.py  test_bridging_arc_table.py  test_composite_sampler.py  test_content_structure_discipline.py  test_cost_attribution_dashboard_binding.py  test_cost_attribution_sandbox_fanout.py  test_cost_formula.py  test_cost_record_otel_serializer.py  test_cp_source_namespace_verification.py  test_cross_deployment_monotonic_tightening.py  test_cross_family_rollup.py  test_deferral_envelope.py  test_eval_vs_runtime_gate.py  test_f3_lifecycle_event_mapping.py  test_harness_breaker_schema.py  test_hitl_operator_burden_namespace.py  test_hitl_webhook_namespace.py  test_idempotency_join_dedup.py  test_local_first_otlp_collector.py  test_mcp_trust_namespace.py  test_multi_tenant_cross_cutting_enforcement.py  test_multi_tenant_trace_separation_and_audit_ledger.py  test_namespace_collision_discipline.py  test_namespace_map.py  test_observability_matrix.py  test_operator_burden_eval_dashboard_binding.py  test_operator_burden_eval_primitives.py  test_otel_genai_base.py  test_pause_resume_audit_helpers.py  test_pause_resume_namespace.py  test_per_cell_backend_class.py  test_per_cell_cardinality_budget.py  test_per_cell_collector_placement_matrix.py  test_per_dimension_preservation_invariants.py  test_per_sandbox_tier_otlp_reachability.py  test_prompt_governance_gradient.py  (+12 more)
harness-runtime/: pyproject.toml
harness-runtime/tests/: test_ac2_bootstrap_path_wiring.py  test_admin_inspect.py  test_admin_pidfile.py  test_admin_shutdown_cli.py  test_api.py  test_automatic_memory_runtime.py  test_b_fallback_chain_family_cost_composition.py  test_bootstrap.py  test_bootstrap_stage.py  test_ca_cost_aggregate.py  test_cli_daemon.py  test_cli_daemon_client.py  test_cli_one_shot.py  test_cli_profile_loading.py  test_cli_scaffold.py  test_config_collector_config.py  test_config_loader.py  test_config_otel_config.py  test_config_path_bindings.py  test_config_provider_secrets.py  test_drain.py  (+122 more)
(+471 files in other folders)
