# harness-as — Action Surface (AS) axis. uv workspace member.
# Authority: harness-as/CLAUDE.md; AS plan v1 (U-AS-01 .. U-AS-33).
# Owns MCP server boundary (AS-AL-2) + sandbox.* observability namespace.

[project]
name = "harness-as"
version = "0.0.0"
description = "H_T Action Surface (AS) axis"
requires-python = ">=3.12"
dependencies = [
    "harness-core",
    "harness-is",                     # cross-axis: AS→IS edges (CXA v2.1 §2.3.1) — read-only consumption
    "mcp>=1.2",                       # MCP host + client — modelcontextprotocol/python-sdk (FastMCP)
    "opentelemetry-api>=1.30",        # sandbox.* / 15-namespace emission at MCP server boundary
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
]

[tool.uv.sources]
harness-core = { workspace = true }
harness-is = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_as"]
