# harness-is — Information Substrate (IS) axis. uv workspace member.
# Authority: harness-is/CLAUDE.md; IS plan v2.2 (U-IS-01 .. U-IS-17).

[project]
name = "harness-is"
version = "0.0.0"
description = "H_T Information Substrate (IS) axis"
requires-python = ">=3.12"
dependencies = [
    "harness-core",
]

[tool.uv.sources]
harness-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_is"]
